--- a/bible_home.html
+++ b/bible_home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Press On</title>
+  <title>Abide Daily</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.3/firebase-ui-auth.css" />
 </head>
@@ -13,18 +13,18 @@
  
   <!--PUT HEADER, SUB-HEADER HERE-->
   
-  <div class="sign-in-or-sign-out"></div>
- 
-  <div class="navigation-buttons"></div>
+  <div class="XXX"></div>
+ <!--^^ fill in content-->
 
-  <!--PUT ABIDE AND PRAY BUTTONS HERE-->
-
+  <!-- Put the Firebase config here -->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
- 
+  <!-- Firebase Auth -->
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/ui/4.7.3/firebase-ui-auth.js"></script>
 
   <script>
+    // Your web app's Firebase configuration
     var firebaseConfig = {
       apiKey: "AIzaSyBSKcYXEGxgat6cXy1mIax_MtM34OyVJ_A",
       authDomain: "kiei-451-1fdb5.firebaseapp.com",
@@ -33,10 +33,11 @@
       messagingSenderId: "732748202062",
       appId: "1:732748202062:web:e3d3ec94cbafb412eb031f"
     };
+    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
 
-  <script src="index.js"></script>
+  <script src="bible_home.js"></script>
 </body>
 
 </html>
