--- a/prayer.html
+++ b/prayer.html
@@ -27,6 +27,7 @@
     </form>
   </div>
 
+  <div class="render-prayers"></div>
 
    <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
