--- a/bible_home.html
+++ b/bible_home.html
@@ -13,14 +13,23 @@
  
   <!--PUT HEADER, SUB-HEADER HERE-->
   
-  <div class="XXX"></div>
+  <div class="sign-in-or-sign-out"></div>
+ 
+  <div class="navigation-buttons"></div>
+
  <!--^^ fill in content-->
 
-  <!-- Put the Firebase config here -->
+   <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-  <!-- Firebase Auth -->
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+
+  <!-- FirebaseUI Auth -->
+  <!-- https://firebaseopensource.com/projects/firebase/firebaseui-web/ -->
   <script src="https://www.gstatic.com/firebasejs/ui/4.7.3/firebase-ui-auth.js"></script>
 
   <script>
