--- a/bible_home.html
+++ b/bible_home.html
@@ -17,7 +17,7 @@
  
   <div class="navigation-buttons"></div>
 
- <!--^^ fill in content-->
+  <div class="bible-notes"></div>
 
    <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
