--- a/bible_home.html
+++ b/bible_home.html
@@ -19,6 +19,19 @@
 
   <div class="bible-notes"></div>
 
+  <div class="verse-lookup-form">
+    <form id="form" class="w-full mt-8">
+        <div class="md:mx-0 mx-4">
+        <span class="font-bold text-xl">Passage lookup:</span>
+        </div>
+        <input type="text" id="passage-lookup" name="passage-lookup" placeholder="E.g., John 3:16, or Acts 1:2-7" class="my-2 p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500">
+        <button class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-xl" id="submit-button">Submit</button>
+        <div class="italic" id="entry-instructions">Enter single verses (John 3:16), passages (John 16:32-33), multiple verses within a single chapter (Pslam 121:1,8), or verses from multiple chapters (Jeremiah 29:11, John 3:16)</div>
+    </form>
+  </div>
+
+  <div class="passage"></div>
+
    <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
