--- a/bible_home.html
+++ b/bible_home.html
@@ -12,12 +12,21 @@
 <body>
  
   <!--PUT HEADER, SUB-HEADER HERE-->
-  
-  <div class="sign-in-or-sign-out"></div>
- 
-  <div class="navigation-buttons"></div>
+  <h1>
+    <div class="flex">
+      <div class="w-1/3 py-2 px-4 text-left bg-gray-100">
+        <div class="navigation-buttons"></div>
+      </div>
+      <div class="w-1/3 py-2 px-4 text-center bg-gray-100">
+        <div class="home-button"></div>      
+      </div>
+      <div class="w-1/3 py-2 px-4 text-right bg-gray-100">
+        <div class="sign-in-or-sign-out"></div>
+      </div>
+    </div>
+  </h1>
 
-  <div class="bible-notes"></div>
+  <div class="bible-notes text-right py-2 px-4"></div>
 
   <div class="verse-lookup-form">
     <form id="form" class="w-full mt-8">
