--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
 <body>
  
   <!--PUT HEADER, SUB-HEADER HERE-->
-  
-  <div class="sign-in-or-sign-out"></div>
- 
-  <div class="navigation-buttons"></div>
+  <h1>
+    <div class="flex">
+      <div class="w-1/3 py-2 px-4 text-left bg-gray-100">
+        <div class="navigation-buttons"></div>
+      </div>
+      <div class="w-1/3 py-2 px-4 text-center bg-gray-100"></div>
+      <div class="w-1/3 py-2 px-4 text-right bg-gray-100">
+        <div class="sign-in-or-sign-out"></div>
+      </div>
+    </div>
+  </h1>
 
    <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
