--- a/prayer.html
+++ b/prayer.html
@@ -13,17 +13,25 @@
  
   <!--PUT HEADER, SUB-HEADER HERE-->
   
-  <div class="sign-in-or-sign-out"></div>
- 
-  <div class="navigation-buttons"></div>
+  <h1>
+    <div class="flex">
+      <div class="w-1/3 py-2 px-4 text-left bg-blue-50">
+        <div class="navigation-buttons"></div>
+      </div>
+      <div class="w-1/3 py-2 px-4 text-center bg-blue-50"></div>
+      <div class="w-1/3 py-2 px-4 text-right bg-blue-50">
+        <div class="sign-in-or-sign-out"></div>
+      </div>
+    </div>
+  </h1>
 
-  <div class="new-prayer-request"></div>
+  <div class="text-center new-prayer-request py-16"></div>
 
   <div class="new-prayer-form">
-    <form id="form" class="w-full mt-8 hidden">
-        <input type="text" id="title" name="title" placeholder="Prayer title" class="my-2 p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500">
-        <input type="text" id="description" name="description" placeholder="Prayer request description" class="my-2 p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500">
-        <button class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-xl" id="submit-button">Submit</button>
+    <form id="form" class="w-full mt-2 hidden text-center">
+        <input type="text" id="title" name="title" placeholder="Prayer title" class="my-2 p-2 w-64 border border-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 rounded-xl">
+        <input type="text" id="description" name="description" placeholder="Prayer request description" class="my-2 p-2 w-64 border border-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 rounded-xl">
+        <button class="bg-blue-500 hover:bg-blue-300 text-white px-4 py-2 rounded-xl" id="submit-button">Submit</button>
     </form>
   </div>
 
