--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 </head>
 
 <body>
- 
+  <div class=" text-center m-4 font-bold text-purple-900 text-lg"> 
+    <p><h1>Press On</h1></p></div> 
+    <div class="text-center m-8 text-purple-700 text-base">
+      <p>Philippians 3:14</div>
+
   <!--PUT HEADER, SUB-HEADER HERE-->
+
   <h1>
     <div class="flex">
-      <div class="w-1/3 py-2 px-4 text-left bg-gray-100">
+      <div class="w-1/2 py-2 px-4 bg-gray-100 text-right">
         <div class="navigation-buttons"></div>
       </div>
-      <div class="w-1/3 py-2 px-4 text-center bg-gray-100"></div>
-      <div class="w-1/3 py-2 px-4 text-right bg-gray-100">
+      <div class="w-1/2 py-2 px-4 bg-gray-100 text-right">
         <div class="sign-in-or-sign-out"></div>
       </div>
     </div>
