--- a/bible_home.html
+++ b/bible_home.html
@@ -11,7 +11,7 @@
 
 <body>
  
-  <!--PUT HEADER, SUB-HEADER HERE-->
+
   <h1>
     <div class="flex">
       <div class="w-1/3 py-2 px-4 text-left bg-gray-100">
@@ -26,7 +26,7 @@
     </div>
   </h1>
 
-  <div class="bible-notes text-right py-2 px-4"></div>
+  <div class="bible-notes text-left py-8 px-8"></div>
 
   <div class="verse-lookup-form">
     <form id="form" class="w-full mt-8">
