--- a/bible_notes.html
+++ b/bible_notes.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
- 
-  <!--PUT HEADER, SUB-HEADER HERE-->
+  <div class=" text-center m-4 font-bold text-purple-900 text-lg"> 
+    <p><h1>Press On</h1></p></div> 
+    <div class="text-center m-8 text-purple-700 text-base">
+      <p>Philippians 3:14</div>
+
   <h1>
     <div class="flex">
       <div class="w-1/3 py-2 px-4 text-left bg-gray-100">
