--- a/bible_home.html
+++ b/bible_home.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
- 
+  <div class=" text-center m-4 font-bold text-purple-900 text-lg"> 
+    <p><h1>Press On</h1></p></div> 
+    <div class="text-center m-8 text-purple-700 text-base">
+      <p>Philippians 3:14</div>
 
   <h1>
     <div class="flex">
