--- a/bible_home.html
+++ b/bible_home.html
@@ -9,12 +9,6 @@
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.3/firebase-ui-auth.css" />
 </head>
 
-<body>
-  <div class=" text-center m-4 font-bold text-purple-900 text-lg"> 
-    <p><h1>Press On</h1></p></div> 
-    <div class="text-center m-8 text-purple-700 text-base">
-      <p>Philippians 3:14</div>
-
   <h1>
     <div class="flex">
       <div class="w-1/3 py-2 px-4 text-left bg-gray-100">
@@ -29,16 +23,16 @@
     </div>
   </h1>
 
-  <div class="bible-notes text-left py-8 px-8"></div>
+  <div class="bible-notes text-right py-2 px-4"></div>
 
   <div class="verse-lookup-form">
     <form id="form" class="w-full mt-8">
-        <div class="md:mx-0 mx-4 px-4">
+        <div class="px-4">
         <span class="font-bold text-xl">Passage lookup:</span>
         </div>
-        <div class="px-8"><input type="text" id="passage-lookup" name="passage-lookup" placeholder="E.g., John 3:16, or Acts 1:2-7" class="my-1 p-2 w-64 border border-gray-400 rounded focus:outline-none focus:ring-purple-500 focus:border-purple-500">
+        <div class="px-4"><input type="text" id="passage-lookup" name="passage-lookup" placeholder="E.g., John 3:16, or Acts 1:2-7" class="my-1 p-2 w-64 border border-gray-400 rounded focus:outline-none focus:ring-purple-500 focus:border-purple-500">
         <button class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-xl" id="submit-button">Submit</button></div>
-        <div class="italic font-sans text-xs px-8 my-1" id="entry-instructions">Enter single verses (John 3:16), passages (John 16:32-33), multiple verses within a single chapter (Pslam 121:1,8), or verses from multiple chapters (Jeremiah 29:11, John 3:16)</div>
+        <div class="italic font-sans text-xs px-4" id="entry-instructions">Enter single verses (John 3:16), passages (John 16:32-33), multiple verses within a single chapter (Pslam 121:1,8), or verses from multiple chapters (Jeremiah 29:11, John 3:16)</div>
     </form>
   </div>
 
