--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.3/firebase-ui-auth.css" />
 </head>
 
-<body>
-  <div class=" text-center m-4 font-bold text-purple-900 text-lg"> 
-    <p><h1>Press On</h1></p></div> 
-    <div class="text-center m-8 text-purple-700 text-base">
-      <p>Philippians 3:14</div>
-
   <h1>
     <div class="flex">
       <div class="w-1/2 py-2 px-4 bg-gray-100 text-right">
-        <div class="navigation-buttons"></div>
       </div>
       <div class="w-1/2 py-2 px-4 bg-gray-100 text-right">
         <div class="sign-in-or-sign-out"></div>
       </div>
     </div>
   </h1>
+
+  <body>
+    <div class="m-6"></div>
+    <div class=" text-center font-bold text-blue-900 text-3xl"> 
+      <p><h1>Press On</h1></p></div> 
+      <div class="text-center text-blue-700 text-sm italic">
+        <p>Philippians 3:14</div>
+    <div class="navigation-buttons"></div>
+  </body>
 
    <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
