--- a/bible_notes.html
+++ b/bible_notes.html
@@ -27,7 +27,9 @@
     </div>
   </h1>
 
-   <!-- Put the Firebase config here -->
+  <div class="render-notes"></div>
+
+  <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
 
