--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       <div class="w-1/2 py-2 px-4 bg-gray-100 text-right">
       </div>
       <div class="w-1/2 py-2 px-4 bg-gray-100 text-right">
-        <div class="sign-in-or-sign-out"></div>
+        <div class="sign-out"></div>
       </div>
     </div>
   </h1>
+
+  <div class="sign-in"></div>
 
   <body>
     <div class="m-6"></div>
