--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.3/firebase-ui-auth.css" />
 </head>
 
+<div class="w-full box-border box-content h-screen bg-cover bg-no-repeat bg-center" style="background-image: url('IMG_4122.JPG')">
   <h1>
     <div class="flex">
-      <div class="w-1/2 py-2 px-4 bg-gray-100 text-right">
+      <div class="w-1/2 py-2 px-4 bg-gray-900 bg-opacity-60 text-right">
       </div>
-      <div class="w-1/2 py-2 px-4 bg-gray-100 text-right">
+      <div class="w-1/2 py-2 px-4 bg-gray-900 bg-opacity-60 text-right">
         <div class="sign-out"></div>
       </div>
     </div>
@@ -21,14 +22,16 @@
 
   <body>
     <div class="m-6"></div>
-    <div class=" text-center font-bold text-blue-900 text-3xl"> 
+    <div class=" text-center font-bold text-gray-300 text-4xl lg:text-5xl"> 
       <p><h1>Press On</h1></p></div> 
-      <div class="text-center text-blue-700 text-sm italic">
+      <div class="text-center text-gray-100 text-sm lg:text-lg italic">
         <p>Philippians 3:14</div>
     <div class="navigation-buttons"></div>
   </body>
 
   <div class="sign-in"></div>
+
+</div>
 
    <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
