--- a/bible_home.html
+++ b/bible_home.html
@@ -9,30 +9,30 @@
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.3/firebase-ui-auth.css" />
 </head>
 
+<div class="w-full box-border h-screen box-content bg-cover bg-repeat-y bg-top" style="background-image: url('IMG_0620.JPG')">
   <h1>
     <div class="flex">
-      <div class="w-1/3 py-2 px-4 text-left bg-gray-100">
+      <div class="w-1/3 py-2 px-4 text-left bg-red-900 bg-opacity-50">
         <div class="navigation-buttons"></div>
       </div>
-      <div class="w-1/3 py-2 px-4 text-center bg-gray-100">
+      <div class="w-1/3 py-2 px-4 text-center bg-red-900 bg-opacity-50">
         <div class="home-button"></div>      
       </div>
-      <div class="w-1/3 py-2 px-4 text-right bg-gray-100">
+      <div class="w-1/3 py-2 px-4 text-right bg-red-900 bg-opacity-50">
         <div class="sign-in-or-sign-out"></div>
       </div>
     </div>
   </h1>
-
   <div class="bible-notes text-right py-2 px-4"></div>
 
   <div class="verse-lookup-form">
     <form id="form" class="w-full mt-8">
         <div class="px-4">
-        <span class="font-bold text-xl">Passage lookup:</span>
+        <span class="font-bold text-xl text-gray-900">Passage lookup:</span>
         </div>
-        <div class="px-4"><input type="text" id="passage-lookup" name="passage-lookup" placeholder="E.g., John 3:16, or Acts 1:2-7" class="my-1 p-2 w-64 border border-gray-400 rounded focus:outline-none focus:ring-purple-500 focus:border-purple-500">
-        <button class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-xl" id="submit-button">Submit</button></div>
-        <div class="italic font-sans text-xs px-4" id="entry-instructions">Enter single verses (John 3:16), passages (John 16:32-33), multiple verses within a single chapter (Pslam 121:1,8), or verses from multiple chapters (Jeremiah 29:11, John 3:16)</div>
+        <div class="px-4"><input type="text" id="passage-lookup" name="passage-lookup" placeholder="E.g., John 3:16, or Acts 1:2-7" class="my-1 p-2 w-64 border border-gray-400 rounded focus:outline-none focus:ring-red-600 focus:border-red-800">
+        <button class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-xl" id="submit-button">Submit</button></div>
+        <div class="italic font-sans text-xs px-4 text-gray-900" id="entry-instructions">Enter single verses (John 3:16), passages (John 16:32-33), multiple verses within a single chapter (Pslam 121:1,8), or verses from multiple chapters (Jeremiah 29:11, John 3:16)</div>
     </form>
   </div>
 
@@ -42,11 +42,13 @@
       <form id="form2" class="w-full mt-2 text-center">
           <input type="text" id="reference" name="reference" placeholder="Relevant verse references" class="my-2 p-2 w-64 border border-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 rounded-xl">     
           <input type="text" id="note" name="note" placeholder="Notes on passage" class="my-2 p-2 w-64 border border-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 rounded-xl">
-          <button class="bg-blue-500 hover:bg-blue-300 text-white px-4 py-2 rounded-xl" id="notes-submit-button">Submit</button>
+          <button class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-xl" id="notes-submit-button">Submit</button>
       </form>
   </div>
 
   <div class="note-submitted-message"></div>
+
+</div>
 
    <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
