--- a/bible_notes.html
+++ b/bible_notes.html
@@ -9,25 +9,23 @@
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.7.3/firebase-ui-auth.css" />
 </head>
 
-<body>
-  <div class=" text-center m-4 font-bold text-purple-900 text-lg"> 
-    <p><h1>Press On</h1></p></div> 
-    <div class="text-center m-8 text-purple-700 text-base">
-      <p>Philippians 3:14</div>
-
+<div class="w-full box-border h-screen box-content bg-cover bg-repeat-y bg-top" style="background-image: url('IMG_0620.JPG')">
   <h1>
     <div class="flex">
-      <div class="w-1/3 py-2 px-4 text-left bg-gray-100">
+      <div class="w-1/3 py-2 px-4 text-left bg-red-900 bg-opacity-50">
         <div class="navigation-buttons"></div>
       </div>
-      <div class="w-1/3 py-2 px-4 text-center bg-gray-100"></div>
-      <div class="w-1/3 py-2 px-4 text-right bg-gray-100">
+      <div class="w-1/3 py-2 px-4 text-center bg-red-900 bg-opacity-50">
+        <div class="home-button"></div>      
+      </div>
+      <div class="w-1/3 py-2 px-4 text-right bg-red-900 bg-opacity-50">
         <div class="sign-in-or-sign-out"></div>
       </div>
     </div>
   </h1>
 
   <div class="render-notes"></div>
+</div>
 
   <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
