--- a/prayer.html
+++ b/prayer.html
@@ -12,14 +12,14 @@
 <body>
  
   <!--PUT HEADER, SUB-HEADER HERE-->
-  
+  <div class="w-full box-border h-screen box-content bg-cover bg-repeat-y bg-top" style="background-image: url('IMG_47841.PNG')">
   <h1>
     <div class="flex">
-      <div class="w-1/3 py-2 px-4 text-left bg-blue-50">
+      <div class="w-1/3 py-2 px-4 text-left bg-purple-900 bg-opacity-60">
         <div class="navigation-buttons"></div>
       </div>
-      <div class="w-1/3 py-2 px-4 text-center bg-blue-50"></div>
-      <div class="w-1/3 py-2 px-4 text-right bg-blue-50">
+      <div class="w-1/3 py-2 px-4 text-center bg-purple-900 bg-opacity-60"></div>
+      <div class="w-1/3 py-2 px-4 text-right bg-purple-900 bg-opacity-60">
         <div class="sign-in-or-sign-out"></div>
       </div>
     </div>
@@ -36,6 +36,7 @@
   </div>
 
   <div class="render-prayers"></div>
+</div>
 
    <!-- Put the Firebase config here -->
   <!-- The core Firebase JS SDK is always required and must be listed first -->
