--- a/prayer.html
+++ b/prayer.html
@@ -18,7 +18,9 @@
       <div class="w-1/3 py-2 px-4 text-left bg-purple-900 bg-opacity-60">
         <div class="navigation-buttons"></div>
       </div>
-      <div class="w-1/3 py-2 px-4 text-center bg-purple-900 bg-opacity-60"></div>
+      <div class="w-1/3 py-2 px-4 text-center bg-purple-900 bg-opacity-60">
+        <div class="home-button"></div>      
+      </div>
       <div class="w-1/3 py-2 px-4 text-right bg-purple-900 bg-opacity-60">
         <div class="sign-in-or-sign-out"></div>
       </div>
@@ -29,7 +31,7 @@
 
   <div class="new-prayer-form">
     <form id="form" class="w-full mt-2 hidden text-center">
-        <input type="text" id="title" name="title" placeholder="Prayer title" class="my-2 p-2 w-64 border border-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 rounded-xl">
+        <input type="text" id="title" name="title" placeholder="Prayer title (date)" class="my-2 p-2 w-64 border border-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 rounded-xl">
         <input type="text" id="description" name="description" placeholder="Prayer request description" class="my-2 p-2 w-64 border border-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 rounded-xl">
         <button class="bg-blue-500 hover:bg-blue-300 text-white px-4 py-2 rounded-xl" id="submit-button">Submit</button>
     </form>
